--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <style>
             body {margin: 0px;}
             .up {text-align: center;}
-            .vertenza {text-align: center;}
-            .vertenza h1 {font-size: 50px; text-align: left;}
+            .vertenza {text-align: left;}
             .data h2 {width: 50%; margin: 0 auto; font-size: 32px; text-align: right;}
             .vero h1 {width: 50%; margin: 0 auto; font-size: 50px;}
             .up img {width: 100%;}
