--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="vero">
             <h1><red>VERTENZA IN ATTO!</red></h1>
             <ul><div class="vertenza">
-                <h1 class="toggle-btn" onclick="toggleSection(1)"><li>EQUIPAGGI</h1>
+                <h1 class="toggle-btn" onclick="toggleSection(1)"><li>EQUIPAGGI</h1></ul>
                 <div id="section1" class="toggle-section">
                     <div class="papero">
                         <text class="toggle"><red><strong>LA DISCUSSIONE È FINITA?</strong></red></text>
@@ -169,10 +169,9 @@
                             <text><b>NO! </b>La FILT ritiene che tutte queste proposte siano inutili se non inserite in un quadro più ampio di CONTRATTAZIONE TERRITORIALE, in cui siano discussi e concordati gli allacciamenti per rendere realmente più vivibile il turno da parte del personale. Inoltre tutte queste proposte da parte aziendale sono subordinate al piano di assunzioni, quindi non attuabili prima del 2025. <b>Il personale invece deve avere una risposta più rapida!</b><br>Inoltre l'azienda continua a glissare sul tema, scottante ad avviso del sindacato, del distoglimento del personale dal turno IVU attuato in modo unilaterale senza il rispetto di alcuna normativa. Il personale ha bisogno di soluzioni e risposte attuabili ed immediate!</text>
                         </div>
                      </div>
-                </div>                
-            </ul>
+                </div>
             <ul><div class="vertenza">
-                <h1 class="toggle-btn" onclick="toggleSection(2)"><li>MANUTENZIONE</h1>
+                <h1 class="toggle-btn" onclick="toggleSection(2)"><li>MANUTENZIONE</h1></ul>
                 <div id="section2" class="toggle-section">
                     <div class="papero6">
                         <text class="toggle6"><red><strong>Dopo gli scioperi (14/04/23 e 13/07/23),<br>LA DISCUSSIONE È FINITA QUI?</strong></red></text>
@@ -192,8 +191,7 @@
                             <text><b>NO!</b>I sindacati esprimono preoccupazione per l'esternalizzazione dei processi manutentivi e per la possibilità che si creino picchi di produzione con la conseguente saturazione di alcuni impianti a discapito di altri dove il lavoro calerebbe. La <b>FILT</b> ritiene fondamentale la difesa dei posti di lavoro, con anche nuove assunzioni e la valorizzazione del percorso di crescita professionale basato sulle abilitazioni. Rivestono anche, in tale ottica, importanza cruciale gli investimenti e gli ammodernamenti sia degli impianti che delle postazioni di lavoro.</text>
                         </div>
                     </div>
-                </div>                
-            </ul>
+                </div>
         </div>
         <div class="data">
             <h2>11.01.2024</h2>
