--- a/index.html
+++ b/index.html
@@ -13,45 +13,52 @@
         <script src="app.js"></script>
         <style>
             body {margin: 0px;}
+            .logo {display: none;}
             .up {text-align: center;}
+            .vero {margin-top: 2%;}
             .vertenza {text-align: left;}
-            .data h2 {width: 50%; margin: 0 auto; font-size: 32px; text-align: right;}
-            .vero h1 {width: 50%; margin: 0 auto; font-size: 50px;}
+            .vertenza h1 {font-size: 50px; width: 80%; margin: 0 auto; text-align: left;}
+            .data h2 {width: 75%; margin: 0 auto; font-size: 32px; text-align: right;}
+            .vero h1 {width: 80%; margin: 0 auto; font-size: 50px; text-align: left;}
+            .vero p {font-size: 30px; width: 80%; margin: 0 auto;}
             .up img {width: 100%;}
-            .papero {font-size: 30px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 50%;}
-            .papero1 {font-size: 30px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 50%;}
-            .papero2 {font-size: 30px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 50%;}
-            .papero3 {font-size: 30px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 50%;}
-            .papero4 {font-size: 30px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 50%;}
-            .papero5 {font-size: 30px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 50%;}
-            .papero6 {font-size: 30px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 50%;}
-            .papero7 {font-size: 30px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 50%;}
-            .papero8 {font-size: 30px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 50%;}
+            .papero {font-size: 32px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 70%;}
+            .papero1 {font-size: 32px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 70%;}
+            .papero2 {font-size: 32px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 70%;}
+            .papero3 {font-size: 32px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 70%;}
+            .papero4 {font-size: 32px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 70%;}
+            .papero5 {font-size: 32px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 70%;}
+            .papero6 {font-size: 32px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 70%;}
+            .papero7 {font-size: 32px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 70%;}
+            .papero8 {font-size: 32px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 70%;}
             .frase {text-align: center;}
             .frase h1 {width: 70%; margin: 0 auto; font-size: 32px;}
             .frase h2 {font-size: 30px;}
             .iscrizione img {width: 45%;}
 
             @media (max-width: 1200px) {
-                .data h2 {width: 60%; margin: 0 auto; font-size: 32px;}
-                .vero h1 {width: 60%; margin: 0 auto; font-size: 50px;}                
-                .papero {font-size: 30px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
-                .papero1 {font-size: 30px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
-                .papero2 {font-size: 30px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
-                .papero3 {font-size: 30px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
-                .papero4 {font-size: 30px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
-                .papero5 {font-size: 30px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
-                .papero6 {font-size: 30px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
-                .papero7 {font-size: 30px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
-                .papero8 {font-size: 30px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
+                .vertenza h1 {font-size: 50px;}
+                .data h2 {width: 65%; margin: 0 auto; font-size: 32px;}
+                .vero h1 {width: 60%; margin: 0 auto; font-size: 50px;}
+                .vero p {font-size: 30px; width: 80%; margin: 0 auto;}                              
+                .papero {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
+                .papero1 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
+                .papero2 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
+                .papero3 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
+                .papero4 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
+                .papero5 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
+                .papero6 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
+                .papero7 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
+                .papero8 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
                 .iscrizione img {width: 50%;}
                 .frase h1 {width: 70%; margin: 0 auto; font-size: 32px;}
                 .frase h2 {font-size: 30px;}
             }
             @media (max-width: 980px) {
-                .vertenza h1 {font-size: 42px;}
-                .data h2 {width: 70%; margin: 0 auto; font-size: 27px;}
-                .vero h1 {width: 70%; margin: 0 auto; font-size: 38px;}
+                .vertenza h1 {font-size: 38px;}
+                .vero p {font-size: 25px; width: 80%; margin: 0 auto;}
+                .data h2 {width: 75%; margin: 0 auto; font-size: 27px;}
+                .vero h1 {width: 80%; margin: 0 auto; font-size: 38px;}
                 .papero {font-size: 24px; padding-left: 15px; text-align: center; margin: 0 auto; width: 70%;}
                 .papero1 {font-size: 24px; padding-left: 15px; text-align: center; margin: 0 auto; width: 70%;}
                 .papero2 {font-size: 24px; padding-left: 15px; text-align: center; margin: 0 auto; width: 70%;}
@@ -66,35 +73,42 @@
                 .frase h2 {font-size: 25px;}
             }
             @media (max-width: 767px) {
-                .vertenza h1 {font-size: 35px;}
-                .data h2 {width: 80%; margin: 0 auto; font-size: 24px;}
-                .vero h1 {width: 80%; margin: 0 auto; font-size: 30px;}
-                .papero {font-size: 20px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
-                .papero1 {font-size: 20px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
-                .papero2 {font-size: 20px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
-                .papero3 {font-size: 20px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
-                .papero4 {font-size: 20px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
-                .papero5 {font-size: 20px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
-                .papero6 {font-size: 20px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
-                .papero7 {font-size: 20px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
-                .papero8 {font-size: 20px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
+                .vertenza h1 {font-size: 30px; width: 90%; margin: 0 auto;}
+                .vero p {font-size: 22px; width: 90%; margin: 0 auto;}
+                .data h2 {width: 85%; margin: 0 auto; font-size: 24px;}
+                .vero h1 {width: 90%; margin: 0 auto; font-size: 30px;}
+                .papero {font-size: 22px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
+                .papero1 {font-size: 22px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
+                .papero2 {font-size: 22px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
+                .papero3 {font-size: 22px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
+                .papero4 {font-size: 22px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
+                .papero5 {font-size: 22px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
+                .papero6 {font-size: 22px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
+                .papero7 {font-size: 22px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
+                .papero8 {font-size: 22px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
                 .iscrizione img {width: 65%;}
                 .frase h1 {width: 70%; margin: 0 auto; font-size: 24px;}
                 .frase h2 {font-size: 22px;}
             }
             @media (max-width: 480px) {
-                .vertenza h1 {font-size: 33px;}
+                .logo {display: unset;}
+                .logo img {height: 110px;}
+                .sopra {height: 100px;}
+                .up {display: none;}
+                .vero {margin-top: 0%;}
+                .vertenza h1 {font-size: 25px;}
+                .vero p {font-size: 15px; width: 90%; margin: 0 auto;}
                 .data h2 {width: 90%; margin: 0 auto; font-size: 20px;}
                 .vero h1 {width: 90%; margin: 0 auto; font-size: 25px;}
-                .papero {font-size: 18px; padding-left: 5px; padding-right: 0px; text-align: center; width: 90%;}
-                .papero1 {font-size: 18px; padding-left: 5px; padding-right: 0px; text-align: center; width: 90%;}
-                .papero2 {font-size: 18px; padding-left: 5px; padding-right: 0px; text-align: center; width: 90%;}
-                .papero3 {font-size: 18px; padding-left: 5px; padding-right: 0px; text-align: center; width: 90%;}
-                .papero4 {font-size: 18px; padding-left: 5px; padding-right: 0px; text-align: center; width: 90%;}
-                .papero5 {font-size: 18px; padding-left: 5px; padding-right: 0px; text-align: center; width: 90%;}
-                .papero6 {font-size: 18px; padding-left: 5px; padding-right: 0px; text-align: center; width: 95%;}
-                .papero7 {font-size: 18px; padding-left: 5px; padding-right: 0px; text-align: center; width: 95%;}
-                .papero8 {font-size: 18px; padding-left: 5px; padding-right: 0px; text-align: center; width: 95%;}
+                .papero {font-size: 18px; padding-left: 5px; padding-right: 0px; text-align: center; width: 85%;}
+                .papero1 {font-size: 18px; padding-left: 5px; padding-right: 0px; text-align: center; width: 85%;}
+                .papero2 {font-size: 18px; padding-left: 5px; padding-right: 0px; text-align: center; width: 85%;}
+                .papero3 {font-size: 18px; padding-left: 5px; padding-right: 0px; text-align: center; width: 85%;}
+                .papero4 {font-size: 18px; padding-left: 5px; padding-right: 0px; text-align: center; width: 85%;}
+                .papero5 {font-size: 18px; padding-left: 5px; padding-right: 0px; text-align: center; width: 85%;}
+                .papero6 {font-size: 18px; padding-left: 5px; padding-right: 0px; text-align: center; width: 85%;}
+                .papero7 {font-size: 18px; padding-left: 5px; padding-right: 0px; text-align: center; width: 85%;}
+                .papero8 {font-size: 18px; padding-left: 5px; padding-right: 0px; text-align: center; width: 85%;}
                 .iscrizione img {width: 80%;}
                 .frase h1 {width: 85%; margin: 0 auto; font-size: 20px;}
                 .frase h2 {font-size: 18px;}
@@ -125,18 +139,23 @@
             }
 
         </style>
+        <div class="logo">
+            <img src="CGIL.jpg" alt="FILT"/>
+        </div>
+        <div class="sopra"></div>
         <div class="up">
             <img src="SITOCGIL.jpg" alt="CGIL"/>
         </div>
         <div class="vero">
             <h1><red>VERTENZA IN ATTO!</red></h1>
+            <p>Dopo gli scioperi del 14/04/2023 e del 13/07/2023, solo una parte degli obiettivi sono stati raggiungi e la vertenza nei settori equipaggi e manutenzione resta aperta. Scopri i risultati ottenuti nei verbali firmati con <a href="Trenitalia.pdf">Trenitalia</a> e con il <a href="Gruppo FS.pdf">Gruppo FS</a>.</p>
             <ul><div class="vertenza">
                 <h1 class="toggle-btn" onclick="toggleSection(1)"><li>EQUIPAGGI</h1></ul>
                 <div id="section1" class="toggle-section">
                     <div class="papero">
                         <text class="toggle"><red><strong>LA DISCUSSIONE È FINITA?</strong></red></text>
                         <div class="penna">
-                            <text><b>NO! </b>Dopo gli scioperi del 14/04/2023 e del 13/07/2023, la trattativa prosegue nei tavoli nazionali per ottenere rivendicazioni adeguate alle richieste del personale.</text>
+                            <text><b>NO! </b>La trattativa prosegue nei tavoli nazionali per ottenere rivendicazioni adeguate alle richieste del personale.</text>
                         </div>
                     </div>
                     <div class="papero1">
@@ -154,7 +173,7 @@
                     <div class="papero3">
                         <text class="toggle3"><red><strong>REFEZIONE</strong></red></text>
                         <div class="penna3">
-                            <text>La discussione è incentrata sull'aumento di 10 minuti della pausa refezione. Questa sarebbe innalzata così fino ad un minimo di 40 minuti, ma lasciando la possibilità di ridurla in fase di contrattazione territoriale, per migliorare la vivibilità del turno stesso.</text>
+                            <text>La discussione è incentrata sull'aumento di 10 minuti della pausa refezione. Questa sarebbe innalzata così fino ad un minimo di 40 minuti, ma lasciando la possibilità di ridurla in fase di contrattazione territoriale, per migliorare la vivibilità del turno stesso.<br>La sperimentazione del rimborso a pié di lista, per i pasti fuori residenza e per i pasti in residenza durante gli RFR, è parte integrante della discussione.</text>
                         </div>
                     </div>
                     <div class="papero4">
@@ -174,19 +193,19 @@
                 <h1 class="toggle-btn" onclick="toggleSection(2)"><li>MANUTENZIONE</h1></ul>
                 <div id="section2" class="toggle-section">
                     <div class="papero6">
-                        <text class="toggle6"><red><strong>Dopo gli scioperi (14/04/23 e 13/07/23),<br>LA DISCUSSIONE È FINITA QUI?</strong></red></text>
+                        <text class="toggle6"><red><strong>LA DISCUSSIONE È FINITA QUI?</strong></red></text>
                         <div class="penna6">
                             <text><b>NO!</b> La trattativa prosegue nei tavoli nazionali per ottenere rivendicazioni adeguate alle richieste del personale.</text>
                         </div>
                     </div>
                     <div class="papero7">
-                        <text class="toggle7"><red><strong>ENTRIAMO NEL VIVO!<br>Di cosa si tratta ai tavoli?</strong></red></text>
+                        <text class="toggle7"><red><strong>ENTRIAMO NEL VIVO!</strong></red></text>
                         <div class="penna7">
                              <text>NUOVO MODELLO: <b>LA VERTICALITÀ</b><br>Le 3 Direzioni Business hanno presentato le attività principali del nuovo modello di Direzione Tecnica e i processi di internalizzazione/esternalizzazione dentro Trasporto Regionale-IC-AV. In altri termini, l'azienda sta dividendo la manutenzione per divisione e creando una Linea Qualità all'interno delle stesse.</text>
                         </div>
                     </div>
                     <div class="papero8">
-                        <text class="toggle8"><red><strong>Per la Filt CGIL e i lavoratori<br>È SUFFICIENTE?</strong></red></text>
+                        <text class="toggle8"><red><strong>È SUFFICIENTE?</strong></red></text>
                         <div class="penna8">
                             <text><b>NO!</b>I sindacati esprimono preoccupazione per l'esternalizzazione dei processi manutentivi e per la possibilità che si creino picchi di produzione con la conseguente saturazione di alcuni impianti a discapito di altri dove il lavoro calerebbe. La <b>FILT</b> ritiene fondamentale la difesa dei posti di lavoro, con anche nuove assunzioni e la valorizzazione del percorso di crescita professionale basato sulle abilitazioni. Rivestono anche, in tale ottica, importanza cruciale gli investimenti e gli ammodernamenti sia degli impianti che delle postazioni di lavoro.</text>
                         </div>
@@ -194,7 +213,7 @@
                 </div>
         </div>
         <div class="data">
-            <h2>11.01.2024</h2>
+            <h2>18.01.2024</h2>
         </div>                    
         <div class="albicocco"><div class="iscrizione">
             <a href="https://www.filtcgil.it/filt/1819-scelta-iscrizione-filt.html"><img src="iscrizione.webp" alt="iscrizione"></a>
