--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <h1 class="toggle-btn" onclick="toggleSection(2)"><li>MANUTENZIONE</h1></ul>
                 <div id="section2" class="toggle-section">
                     <div class="papero6">
-                        <text class="toggle6"><red><strong>LA DISCUSSIONE È FINITA QUI?</strong></red></text>
+                        <text class="toggle6"><red><strong>LA DISCUSSIONE È FINITA?</strong></red></text>
                         <div class="penna6">
                             <text><b>NO!</b> La trattativa prosegue nei tavoli nazionali per ottenere rivendicazioni adeguate alle richieste del personale.</text>
                         </div>
