--- a/index.html
+++ b/index.html
@@ -22,15 +22,24 @@
             .vero h1 {width: 80%; margin: 0 auto; font-size: 50px; text-align: left;}
             .vero p {font-size: 30px; width: 80%; margin: 0 auto;}
             .up img {width: 100%;}
-            .papero {font-size: 32px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 70%;}
-            .papero1 {font-size: 32px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 70%;}
-            .papero2 {font-size: 32px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 70%;}
-            .papero3 {font-size: 32px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 70%;}
-            .papero4 {font-size: 32px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 70%;}
-            .papero5 {font-size: 32px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 70%;}
-            .papero6 {font-size: 32px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 70%;}
-            .papero7 {font-size: 32px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 70%;}
-            .papero8 {font-size: 32px; padding-left: 20px; text-align: center; width: 50%; margin: 0 auto; width: 70%;}
+            .papero {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 70%;}
+            .papero1 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 70%;}
+            .papero2 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 70%;}
+            .papero3 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 70%;}
+            .papero4 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 70%;}
+            .papero5 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 70%;}
+            .papero6 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 70%;}
+            .papero7 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 70%;}
+            .papero8 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 70%;}            
+            .papero p {font-size: 30px;}
+            .papero1 p {font-size: 30px;}
+            .papero2 p {font-size: 30px;}
+            .papero3 p {font-size: 30px;}
+            .papero4 p {font-size: 30px;}
+            .papero5 p {font-size: 30px;}
+            .papero6 p {font-size: 30px;}
+            .papero7 p {font-size: 30px;}
+            .papero8 p {font-size: 30px;}
             .frase {text-align: center;}
             .frase h1 {width: 70%; margin: 0 auto; font-size: 32px;}
             .frase h2 {font-size: 30px;}
@@ -41,15 +50,24 @@
                 .data h2 {width: 65%; margin: 0 auto; font-size: 32px;}
                 .vero h1 {width: 60%; margin: 0 auto; font-size: 50px;}
                 .vero p {font-size: 30px; width: 80%; margin: 0 auto;}                              
-                .papero {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
-                .papero1 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
-                .papero2 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
-                .papero3 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
-                .papero4 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
-                .papero5 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
-                .papero6 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
-                .papero7 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
-                .papero8 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 60%;}
+                .papero {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 70%;}
+                .papero1 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 70%;}
+                .papero2 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 70%;}
+                .papero3 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 70%;}
+                .papero4 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 70%;}
+                .papero5 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 70%;}
+                .papero6 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 70%;}
+                .papero7 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 70%;}
+                .papero8 {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 70%;}
+                .papero p {font-size: 15px;}
+                .papero1 p {font-size: 30px;}
+                .papero2 p {font-size: 30px;}
+                .papero3 p {font-size: 30px;}
+                .papero4 p {font-size: 30px;}
+                .papero5 p {font-size: 30px;}
+                .papero6 p {font-size: 30px;}
+                .papero7 p {font-size: 30px;}
+                .papero8 p {font-size: 30px;}
                 .iscrizione img {width: 50%;}
                 .frase h1 {width: 70%; margin: 0 auto; font-size: 32px;}
                 .frase h2 {font-size: 30px;}
@@ -68,6 +86,15 @@
                 .papero6 {font-size: 24px; padding-left: 15px; text-align: center; margin: 0 auto; width: 70%;}
                 .papero7 {font-size: 24px; padding-left: 15px; text-align: center; margin: 0 auto; width: 70%;}
                 .papero8 {font-size: 24px; padding-left: 15px; text-align: center; margin: 0 auto; width: 70%;}
+                .papero p {font-size: 25px;}
+                .papero1 p {font-size: 25px;}
+                .papero2 p {font-size: 25px;}
+                .papero3 p {font-size: 25px;}
+                .papero4 p {font-size: 25px;}
+                .papero5 p {font-size: 25px;}
+                .papero6 p {font-size: 25px;}
+                .papero7 p {font-size: 25px;}
+                .papero8 p {font-size: 25px;}
                 .iscrizione img {width: 55%;}
                 .frase h1 {width: 70%; margin: 0 auto; font-size: 27px;}
                 .frase h2 {font-size: 25px;}
@@ -86,6 +113,15 @@
                 .papero6 {font-size: 22px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
                 .papero7 {font-size: 22px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
                 .papero8 {font-size: 22px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
+                .papero p {font-size: 22px;}
+                .papero1 p {font-size: 22px;}
+                .papero2 p {font-size: 22px;}
+                .papero3 p {font-size: 22px;}
+                .papero4 p {font-size: 22px;}
+                .papero5 p {font-size: 22px;}
+                .papero6 p {font-size: 22px;}
+                .papero7 p {font-size: 22px;}
+                .papero8 p {font-size: 22px;}
                 .iscrizione img {width: 65%;}
                 .frase h1 {width: 70%; margin: 0 auto; font-size: 24px;}
                 .frase h2 {font-size: 22px;}
@@ -109,6 +145,15 @@
                 .papero6 {font-size: 18px; padding-left: 5px; padding-right: 0px; text-align: center; width: 85%;}
                 .papero7 {font-size: 18px; padding-left: 5px; padding-right: 0px; text-align: center; width: 85%;}
                 .papero8 {font-size: 18px; padding-left: 5px; padding-right: 0px; text-align: center; width: 85%;}
+                .papero p {font-size: 15px;}
+                .papero1 p {font-size: 15px;}
+                .papero2 p {font-size: 15px;}
+                .papero3 p {font-size: 15px;}
+                .papero4 p {font-size: 15px;}
+                .papero5 p {font-size: 15px;}
+                .papero6 p {font-size: 15px;}
+                .papero7 p {font-size: 15px;}
+                .papero8 p {font-size: 15px;}
                 .iscrizione img {width: 80%;}
                 .frase h1 {width: 85%; margin: 0 auto; font-size: 20px;}
                 .frase h2 {font-size: 18px;}
@@ -155,7 +200,7 @@
                     <div class="papero">
                         <text class="toggle"><red><strong>LA DISCUSSIONE È FINITA?</strong></red></text>
                         <div class="penna">
-                            <text><b>NO! </b>La trattativa prosegue nei tavoli nazionali per ottenere rivendicazioni adeguate alle richieste del personale.</text>
+                            <p><b>NO! </b>La trattativa prosegue nei tavoli nazionali per ottenere rivendicazioni adeguate alle richieste del personale.</p>
                         </div>
                     </div>
                     <div class="papero1">
