--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             body {margin: 0px;}
             .logo {display: none;}
             .up {text-align: center;}
+            .titolo h1 {font-size: 60px;}
             .vero {margin-top: 2%;}
             .vertenza {text-align: left;}
             .vertenza h1 {font-size: 50px; width: 80%; margin: 0 auto; text-align: left;}
@@ -48,6 +49,7 @@
             @media (max-width: 1200px) {
                 .vertenza h1 {font-size: 50px;}
                 .data h2 {width: 65%; margin: 0 auto; font-size: 32px;}
+                .titolo h1 {font-size: 50px;}
                 .vero h1 {width: 60%; margin: 0 auto; font-size: 50px;}
                 .vero p {font-size: 30px; width: 80%; margin: 0 auto;}                              
                 .papero {font-size: 32px; padding-left: 20px; text-align: center; margin: 0 auto; width: 70%;}
@@ -77,6 +79,7 @@
                 .vero p {font-size: 25px; width: 80%; margin: 0 auto;}
                 .data h2 {width: 75%; margin: 0 auto; font-size: 27px;}
                 .vero h1 {width: 80%; margin: 0 auto; font-size: 38px;}
+                .titolo h1 {font-size: 38px;}
                 .papero {font-size: 24px; padding-left: 15px; text-align: center; margin: 0 auto; width: 70%;}
                 .papero1 {font-size: 24px; padding-left: 15px; text-align: center; margin: 0 auto; width: 70%;}
                 .papero2 {font-size: 24px; padding-left: 15px; text-align: center; margin: 0 auto; width: 70%;}
@@ -104,6 +107,7 @@
                 .vero p {font-size: 22px; width: 90%; margin: 0 auto;}
                 .data h2 {width: 85%; margin: 0 auto; font-size: 24px;}
                 .vero h1 {width: 90%; margin: 0 auto; font-size: 30px;}
+                .titolo h1 {font-size: 30px;}
                 .papero {font-size: 22px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
                 .papero1 {font-size: 22px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
                 .papero2 {font-size: 22px; padding-left: 10px; text-align: center; margin: 0 auto; width: 80%;}
@@ -131,6 +135,7 @@
                 .logo img {height: 110px;}
                 .sopra {height: 100px;}
                 .up {display: none;}
+                .titolo h1 {font-size: 35px;}
                 .vero {margin-top: 0%;}
                 .vertenza h1 {font-size: 25px;}
                 .vero p {font-size: 15px; width: 90%; margin: 0 auto;}
@@ -191,9 +196,12 @@
         <div class="up">
             <img src="SITOCGIL.jpg" alt="CGIL"/>
         </div>
+        <div class="titolo">
+            <h1>SPAZIO FILT</h1>
+        </div>
         <div class="vero">
             <h1>VERTENZA IN ATTO!</h1>
-            <p>Dopo gli scioperi del 14/04/2023 e del 13/07/2023, solo una parte degli obiettivi sono stati raggiungi e la vertenza nei settori equipaggi e manutenzione di Trenitalia resta aperta. Scopri i risultati ottenuti nei verbali firmati con <a href="Trenitalia.pdf">Trenitalia</a> e con il <a href="Gruppo FS.pdf">Gruppo FS</a>.</p>
+            <p>Dopo gli scioperi del 14/04/2023 e del 13/07/2023, solo una parte degli obiettivi sono stati raggiungi e la vertenza nei settori equipaggi e manutenzione di <b>Trenitalia</b> resta aperta. Scopri i risultati ottenuti nei verbali firmati con <a href="Trenitalia.pdf">Trenitalia</a> e con il <a href="Gruppo FS.pdf">Gruppo FS</a>.</p>
             <ul><div class="vertenza">
                 <h1 class="toggle-btn" onclick="toggleSection(1)"><li>EQUIPAGGI</h1></ul>
                 <div id="section1" class="toggle-section">
