--- a/index.html
+++ b/index.html
@@ -189,15 +189,15 @@
             }
 
         </style>
+        <div class="titolo">
+            <h1>AGORA FILT</h1>
+        </div>
         <div class="logo">
             <img src="CGIL.jpg" alt="FILT"/>
         </div>
         <div class="sopra"></div>
         <div class="up">
             <img src="SITOCGIL.jpg" alt="CGIL"/>
-        </div>
-        <div class="titolo">
-            <h1>SPAZIO FILT</h1>
         </div>
         <div class="vero">
             <h1>VERTENZA IN ATTO!</h1>
