--- a/index.html
+++ b/index.html
@@ -131,10 +131,7 @@
                 .frase h2 {font-size: 22px;}
             }
             @media (max-width: 480px) {
-                .logo {display: unset;}
-                .logo img {height: 110px;}
-                .sopra {height: 100px;}
-                .up {display: none;}
+                .up {text-align: center;}
                 .titolo h1 {font-size: 35px;}
                 .vero {margin-top: 0%;}
                 .vertenza h1 {font-size: 25px;}
