--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             }
             @media (max-width: 480px) {
                 .up {text-align: center;}
+                .up img {width: 100%;}
                 .titolo h1 {font-size: 35px;}
                 .vero {margin-top: 0%;}
                 .vertenza h1 {font-size: 25px;}
@@ -187,7 +188,7 @@
 
         </style>
         <div class="titolo">
-            <h1>AGORA FILT</h1>
+            <h1>AGORÀ FILT</h1>
         </div>
         <div class="logo">
             <img src="CGIL.jpg" alt="FILT"/>
